--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,62 +2,69 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<title>Eat-Da-Burger</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="assets/css/burger_style.css" type="text/css" />
-		<script src="https://code.jquery.com/jquery.js"></script>
-	</head>
-	<body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	
+  <title>Eat-Da-Burger</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/css/burger_style.css" type="text/css" />
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</head>
+
+<body>
 		{{{ body }}}
-	</body>
+</body>
 </html>
 
 
 <script type="text/javascript">
 
+    $(function() {
 
-$(function() {
-  $(".devourIt").on("click", function(event) {
-    var id = $(this).data("id");
+      $(".devourIt").on("click", function(event) {
+        var id = $(this).data("id");
 
-    var newDevoured = {
-      devoured: true
-    };
+        var newDevoured = {
+          devoured: true
+        };
 
-    // Send the PUT request.
-    $.ajax("/api/burgers/" + id, {
-      type: "PUT",
-      data: newDevoured
-    }).then(
-      function() {
-        console.log("changed devoured to true");
-        // Reload the page to get the updated list
-        location.reload();
-      }
-    );
-  });
+        // Send the PUT request.
+        $.ajax("/api/burgers/" + id, {
+          type: "PUT",
+          data: newDevoured
+        }).then(
+          function() {
+            location.reload();
+          }
+        );
+      });
 
-  $("#btnSubmit").on("click", function(event) {
-    // Make sure to preventDefault on a submit event.
-    event.preventDefault();
+      $("#btnSubmit").on("click", function(event) {
+        event.preventDefault();
 
-    var newBurger = {
-      burger_name: $("#burgerName").val().trim(),
-      devoured: false
-    };
+        var burger = $("#burgerName").val().trim();
 
-    // Send the POST request.
-    $.ajax("/api/burgers", {
-      type: "POST",
-      data: newBurger
-    }).then(
-      function() {
-        console.log("created new burger");
-        // Reload the page to get the updated list
-        location.reload();
-      }
-    );
-  });
-});
+        if (burger !== '') {
+          var newBurger = {
+            burger_name: burger,
+            devoured: false
+          };
+
+          // Send the POST request.
+          $.ajax("/api/burgers", {
+            type: "POST",
+            data: newBurger
+          }).then(
+            function() {
+              location.reload();
+            }
+          );
+        }
+        else
+          alert("Every good burger has a name! Try again!!");
+      });
+    });
 
 </script>
