--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,7 @@
             <ul class="list-unstyled">
                 {{#each burgers}}
                     {{#if devoured}}
-                        <li>{{burger_name}}</li>
+                        <li>- {{burger_name}}</li>
                     {{/if}}
                 {{/each}}
             </ul>
